--- a/schedule.html
+++ b/schedule.html
@@ -88,7 +88,7 @@
     <!-- Breadcrumb Area Start -->
     <section
       class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
-      style="background-image: url(img/bg-img/17.jpg)"
+      style="background-image: url(img/bg-img/bg-1.jpeg)"
     >
       <div class="container h-100">
         <div class="row h-100 align-items-center">
