--- a/accommodation.html
+++ b/accommodation.html
@@ -92,7 +92,7 @@
     <!-- Breadcrumb Area Start -->
     <section
       class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
-      style="background-image: url(img/bg-img/27.jpg)"
+      style="background-image: url(img/bg-img/bg-2.jpg)"
     >
       <div class="container h-100">
         <div class="row h-100 align-items-center">
@@ -115,6 +115,39 @@
       </div>
     </section>
     <!-- Breadcrumb Area End -->
+
+    <!-- Map Area Start -->
+    <section class="map-area section-padding-100">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div
+              class="section-heading text-center wow fadeInUp"
+              data-wow-delay="300ms"
+            >
+              <p>Find Your Way</p>
+              <h4>Accommodation Locations</h4>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="map-container wow fadeInUp" data-wow-delay="300ms">
+              <iframe
+                src="https://mim.smartbookings.rw/Event-Hotels/65bcca2a75cf2/"
+                width="100%"
+                height="6900"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                scrollable="false"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Map Area End -->
 
     <!-- About Accommodation Area Start -->
 
