--- a/speakers.html
+++ b/speakers.html
@@ -80,7 +80,7 @@
     <!-- Breadcrumb Area Start -->
     <section
       class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
-      style="background-image: url(img/bg-img/27.jpg)"
+      style="background-image: url(img/bg-img/bg-1.jpeg)"
     >
       <div class="container h-100">
         <div class="row h-100 align-items-center">
