--- a/registration.html
+++ b/registration.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="ASEA Conference Accommodation Information"
-    />
+    <meta name="description" content="ASEA Conference Registration" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
@@ -13,7 +10,7 @@
     />
 
     <!-- Title -->
-    <title>ASEA - Accommodation Information</title>
+    <title>ASEA - Conference Registration</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/logo_asea.png" />
@@ -69,15 +66,16 @@
                   </li>
 
                   <li><a href="schedule.html"> Program</a></li>
-                  <li class="active">
-                    <a href="accommodation.html">Accommodation</a>
-                  </li>
+                  <li><a href="accommodation.html">Accommodation</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="travel.html">Travel</a></li>
+                  
                 </ul>
 
                 <!-- Get Tickets Button -->
-                <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
+                <a
+                  href="registration.html"
+                  class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
@@ -92,20 +90,20 @@
     <!-- Breadcrumb Area Start -->
     <section
       class="breadcrumb-area bg-img bg-gradient-overlay jarallax"
-      style="background-image: url(img/bg-img/bg-2.jpg)"
+      style="background-image: url(img/bg-img/27.jpg)"
     >
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12">
             <div class="breadcrumb-content">
-              <h2 class="page-title">Accommodation</h2>
+              <h2 class="page-title">Registration</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
                     <a href="index.html">Home</a>
                   </li>
                   <li class="breadcrumb-item active" aria-current="page">
-                    Accommodation
+                    Registration
                   </li>
                 </ol>
               </nav>
@@ -116,42 +114,34 @@
     </section>
     <!-- Breadcrumb Area End -->
 
-    <!-- Map Area Start -->
-    <section class="map-area">
-      <div class="container-fluid">
+    <!-- Registration Area Start -->
+    <section class="contact--us-area">
+      <div class="container">
         <div class="row">
-          <div class="col-12">
-            <div
-              class="section-heading text-center wow fadeInUp"
-              data-wow-delay="300ms"
+          <!-- Registration Form -->
+          <div class="col-12 col-lg-12 mx-auto">
+            <div class="section-heading text-center">
+              <p>Join us for the 28th Annual Conference</p>
+              <h4>REGISTER NOW</h4>
+              <p class="mt-4">
+                Please fill in the form below to register for the ASEA Annual
+                Conference 2025.
+              </p>
+            </div>
+            <iframe
+              src="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+              width="100%"
+              height="800"
+              frameborder="0"
+              marginheight="0"
+              marginwidth="0"
+              >Loading…</iframe
             >
-              <p>Find Your Way</p>
-              <h4>Accommodation Locations</h4>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="map-container wow fadeInUp" data-wow-delay="300ms" style="height: 1200px !important">
-              <iframe
-                src="https://mim.smartbookings.rw/Event-Hotels/65bcca2a75cf2/"
-                width="100%"
-                height="6900"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                scrollable="false"
-              ></iframe>
-            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Map Area End -->
-
-    <!-- About Accommodation Area Start -->
-
-    <!-- About Accommodation Area End -->
+    <!-- Registration Area End -->
 
     <!-- Footer Area Start -->
     <footer class="footer-area bg-img bg-overlay-2 section-padding-100-0">
@@ -222,10 +212,10 @@
 
                 <!-- Footer Nav -->
                 <ul class="footer-nav">
-                  <li><a href="#">Registration</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Accommodation</a></li>
-                  <li><a href="#">Speakers</a></li>
+                  <li><a href="registration.html">Registration</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="accommodation.html">Accommodation</a></li>
+                  <li><a href="speakers.html">Speakers</a></li>
                 </ul>
               </div>
             </div>
