--- a/accommodation.html
+++ b/accommodation.html
@@ -77,7 +77,9 @@
                 </ul>
 
                 <!-- Get Tickets Button -->
-                <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
+                <a
+                  href="registration.html"
+                  class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
@@ -132,7 +134,11 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <div class="map-container wow fadeInUp" data-wow-delay="300ms" style="height: 1200px !important">
+            <div
+              class="map-container wow fadeInUp"
+              data-wow-delay="300ms"
+              style="height: 1200px !important"
+            >
               <iframe
                 src="https://mim.smartbookings.rw/Event-Hotels/65bcca2a75cf2/"
                 width="100%"
