--- a/index-2.html
+++ b/index-2.html
@@ -65,7 +65,9 @@
                 </ul>
 
                 <!-- Get Tickets Button -->
-                <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
+                <a
+                  href="registration.html"
+                  class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
