--- a/speakers.html
+++ b/speakers.html
@@ -65,7 +65,9 @@
                 </ul>
 
                 <!-- Get Tickets Button -->
-                <a href="#" class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
+                <a
+                  href="registration.html"
+                  class="btn confer-btn mt-3 mt-lg-0 ml-3 ml-lg-5"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
@@ -106,146 +108,205 @@
     <section class="our-speaker-area section-padding-100">
       <div class="container">
         <div class="row">
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/Rwabukumba.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Pierre Celestin Rwabukumba</h5>
-                  <p>CEO - RSE</p>
-                </div>
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/Rwabukumba.jpg" alt="" />
               </div>
-            </div>
-  
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/CEO-Thapelo123456.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Thapelo Tsheole</h5>
-                  <p>CEO-Rwanda CMA</p>
-                </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
               </div>
-            </div>
-  
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/Iza.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Iza Irame</h5>
-                  <p>CEO-Crystal Telecom Ltd</p>
-                </div>
-              </div>
-            </div>
-  
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/Idi.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Innocent Idi KABANDA</h5>
-                  <p>Director of Portfolio Management Division-RSSB</p>
-                </div>
-              </div>
-            </div>
-  
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/Shehzad.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Shehzad Noordally</h5>
-                  <p>CEO-CDH Capital Ltd</p>
-                </div>
-              </div>
-            </div>
-  
-            <!-- Single Speaker Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                <!-- Thumb -->
-                <div class="speaker-single-thumb">
-                  <img src="img/speakers/Otengo.jpg" alt="">
-                </div>
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
-                <!-- Info -->
-                <div class="speaker-info">
-                  <h5>Andrew OWINY OTENGO</h5>
-                  <p>
-                    Director &amp; Head of Corporate Finance &amp; Research-MBEA Rwanda
-                  </p>
-                </div>
-              </div>
-            </div>
-  
-            <div class="col-12">
-              <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms" style="visibility: hidden; animation-delay: 300ms; animation-name: none;">
-                <a class="btn confer-btn-white" href="#">view all Speakers <i class="zmdi zmdi-long-arrow-right"></i></a>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Pierre Celestin Rwabukumba</h5>
+                <p>CEO - RSE</p>
               </div>
             </div>
           </div>
+
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/CEO-Thapelo123456.jpg" alt="" />
+              </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+              </div>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Thapelo Tsheole</h5>
+                <p>CEO-Rwanda CMA</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/Iza.jpg" alt="" />
+              </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+              </div>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Iza Irame</h5>
+                <p>CEO-Crystal Telecom Ltd</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/Idi.jpg" alt="" />
+              </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+              </div>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Innocent Idi KABANDA</h5>
+                <p>Director of Portfolio Management Division-RSSB</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/Shehzad.jpg" alt="" />
+              </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+              </div>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Shehzad Noordally</h5>
+                <p>CEO-CDH Capital Ltd</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Single Speaker Area -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div
+              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: visible;
+                animation-delay: 300ms;
+                animation-name: fadeInUp;
+              "
+            >
+              <!-- Thumb -->
+              <div class="speaker-single-thumb">
+                <img src="img/speakers/Otengo.jpg" alt="" />
+              </div>
+              <!-- Social Info -->
+              <div class="social-info">
+                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+              </div>
+              <!-- Info -->
+              <div class="speaker-info">
+                <h5>Andrew OWINY OTENGO</h5>
+                <p>
+                  Director &amp; Head of Corporate Finance &amp; Research-MBEA
+                  Rwanda
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div
+              class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp"
+              data-wow-delay="300ms"
+              style="
+                visibility: hidden;
+                animation-delay: 300ms;
+                animation-name: none;
+              "
+            >
+              <a class="btn confer-btn-white" href="#"
+                >view all Speakers <i class="zmdi zmdi-long-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Our Speakings Area End -->
