--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                     data-animation="fadeInUp"
                     data-delay="700ms"
                   >
-                    <a href="#" class="btn confer-btn m-2"
+                    <a href="about.html" class="btn confer-btn m-2"
                       >View more <i class="zmdi zmdi-long-arrow-right"></i
                     ></a>
-                    <a href="#" class="btn confer-btn m-2"
+                    <a href="registration.html" class="btn confer-btn m-2"
                       >REGISTER NOW <i class="zmdi zmdi-long-arrow-right"></i
                     ></a>
                   </div>
@@ -904,7 +904,7 @@
                 <p>
                   <i class="zmdi zmdi-check"></i> Talk to the Editors Session
                 </p>
-                <a href="#" class="btn confer-btn w-100 mb-30"
+                <a href="registration.html" class="btn confer-btn w-100 mb-30"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
@@ -931,7 +931,7 @@
                 <p>
                   <i class="zmdi zmdi-check"></i> Talk to the Editors Session
                 </p>
-                <a href="#" class="btn confer-btn w-100 mb-30"
+                <a href="registration.html" class="btn confer-btn w-100 mb-30"
                   >Register Now <i class="zmdi zmdi-long-arrow-right"></i
                 ></a>
               </div>
@@ -989,59 +989,58 @@
         <div class="row">
           <div class="col-12">
             <!-- Our Sponsor area -->
-            <div class="our-sponsor-area d-flex flex-wrap">
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/13_rwanda_stock-1-150x150.png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/30_nasd-1-150x150.png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/wordpress_login_logo.png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/25_tunis-1-150x150 (1) (1).png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/30_nasd-1-150x150.png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/7_mse-1-150x150 (1).png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/ESE_Logo (1) (1).png" alt=""
-                /></a>
-              </div>
-              <!-- Single Sponsor -->
-              <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                <a href="#"
-                  ><img src="img/members/téléchargement.png" alt=""
-                /></a>
+            <div class="our-sponsor-area">
+              <!-- Sponsor Slider -->
+              <div class="sponsor-slider owl-carousel" data-items="4" data-margin="30" data-loop="true" data-autoplay="true" data-smartspeed="700">
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/13_rwanda_stock-1-150x150.png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/30_nasd-1-150x150.png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/wordpress_login_logo.png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/25_tunis-1-150x150 (1) (1).png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/30_nasd-1-150x150.png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/7_mse-1-150x150 (1).png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/ESE_Logo (1) (1).png" alt=""></a>
+                </div>
+                <!-- Single Sponsor -->
+                <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                  <a href="#"><img src="img/members/téléchargement.png" alt=""></a>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- Our client area -->
+        </div>
+        <div class="row mt-50
+        ">
+          <!-- Heading -->
+          <div class="col-12">
+            <div
+              class="section-heading-2 text-center wow fadeInUp"
+              data-wow-delay="300ms"
+            >
+              <h4>SPONSORS</h4>
+            </div>
+          </div>
         </div>
       </div>
     </section>
