--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <title>ASEA - Conference Event HTML Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/logo_asea.png" />
+    <link rel="icon" href="img/core-img/ASEA-LOGO.png" />
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
@@ -35,7 +35,7 @@
           <nav class="classy-navbar justify-content-between" id="conferNav">
             <!-- Logo -->
             <a class="nav-brand" href="index.html"
-              ><img src="img/core-img/logo_asea.png" width="150" alt=""
+              ><img src="img/core-img/ASEA-LOGO.png" width="150" alt=""
             /></a>
 
             <!-- Navbar Toggler -->
@@ -426,7 +426,7 @@
               >
                 <!-- Footer Logo -->
                 <a href="#" class="footer-logo"
-                  ><img src="img/core-img/logo_asea.png" alt="" width="150"
+                  ><img src="img/core-img/ASEA-LOGO.png" alt="" width="150"
                 /></a>
                 <p>
                   The African Securities Exchanges Association is the Premier
