--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>ASEA - Conference Event HTML Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/logo_asea.png" />
+    <link rel="icon" href="img/core-img/ASEA-LOGO.png" />
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
@@ -40,7 +40,7 @@
           <nav class="classy-navbar justify-content-between" id="conferNav">
             <!-- Logo -->
             <a class="nav-brand" href="index.html"
-              ><img src="img/core-img/logo_asea.png" width="150" alt=""
+              ><img src="img/core-img/ASEA-LOGO.png" width="90" alt=""
             /></a>
 
             <!-- Navbar Toggler -->
@@ -296,7 +296,7 @@
               <!-- Info -->
               <div class="speaker-info">
                 <h5>Pierre Celestin Rwabukumba</h5>
-                <p>CEO - RSE</p>
+                <p>CEO - RSE & Chairman - ASEA</p>
               </div>
             </div>
           </div>
@@ -322,81 +322,6 @@
               <div class="speaker-info">
                 <h5>Thapelo Tsheole</h5>
                 <p>CEO-Rwanda CMA</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Iza.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Iza Irame</h5>
-                <p>CEO-Crystal Telecom Ltd</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Idi.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Innocent Idi KABANDA</h5>
-                <p>Director of Portfolio Management Division-RSSB</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Shehzad.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Shehzad Noordally</h5>
-                <p>CEO-CDH Capital Ltd</p>
               </div>
             </div>
           </div>
@@ -530,7 +455,7 @@
               <h6 class="ticket-plan">Members</h6>
               <!-- Ticket Icon -->
 
-              <h2 class="ticket-price"><span>$</span>300</h2>
+              <h2 class="ticket-price"><span>$</span>400</h2>
 
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
@@ -702,6 +627,28 @@
               data-wow-delay="300ms"
             >
               <h4>SPONSORS</h4>
+            </div>
+          </div>
+        </div>
+
+        <!-- Sponsors Section - Single Display -->
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <!-- Our Sponsor area -->
+            <div class="our-sponsor-area">
+              <!-- Single Sponsor -->
+              <div
+                class="single-sponsor wow fadeInUp"
+                data-wow-delay="300ms"
+                style="max-width: 200px; margin: 0 auto"
+              >
+                <a href="#">
+                  <img
+                    src="img/members/13_rwanda_stock-1-150x150.png"
+                    alt="Rwanda Stock Exchange"
+                  />
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -877,7 +824,7 @@
               >
                 <!-- Footer Logo -->
                 <a href="#" class="footer-logo"
-                  ><img src="img/core-img/logo_asea.png" alt="" width="150"
+                  ><img src="img/core-img/ASEA-LOGO.png" alt="" width="150"
                 /></a>
                 <p>
                   The African Securities Exchanges Association is the Premier
