--- a/travel.html
+++ b/travel.html
@@ -13,7 +13,7 @@
     <title>ASEA - Travel Information</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/logo_asea.png" />
+    <link rel="icon" href="img/core-img/ASEA-LOGO.png" />
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
@@ -160,7 +160,7 @@
           <nav class="classy-navbar justify-content-between" id="conferNav">
             <!-- Logo -->
             <a class="nav-brand" href="index.html"
-              ><img src="img/core-img/logo_asea.png" width="150" alt=""
+              ><img src="img/core-img/ASEA-LOGO.png" width="90" alt=""
             /></a>
 
             <!-- Navbar Toggler -->
@@ -746,7 +746,7 @@
               >
                 <!-- Footer Logo -->
                 <a href="#" class="footer-logo"
-                  ><img src="img/core-img/logo_asea.png" alt="" width="150"
+                  ><img src="img/core-img/ASEA-LOGO.png" alt="" width="150"
                 /></a>
                 <p>
                   The African Securities Exchanges Association is the Premier
