--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
-                <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                <p><i class="zmdi zmdi-check"></i> All Days Conference Ticket</p>
                 <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
                 <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
                 <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
@@ -486,7 +486,7 @@
 
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
-                <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                <p><i class="zmdi zmdi-check"></i> All Days Conference Ticket</p>
                 <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
                 <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
                 <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
