--- a/speakers.html
+++ b/speakers.html
@@ -133,7 +133,7 @@
               <!-- Info -->
               <div class="speaker-info">
                 <h5>Pierre Celestin Rwabukumba</h5>
-                <p>CEO - RSE</p>
+                <p>CEO - RSE & Chairman - ASEA</p>
               </div>
             </div>
           </div>
@@ -164,96 +164,6 @@
               <div class="speaker-info">
                 <h5>Thapelo Tsheole</h5>
                 <p>CEO-Rwanda CMA</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-              style="
-                visibility: visible;
-                animation-delay: 300ms;
-                animation-name: fadeInUp;
-              "
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Iza.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Iza Irame</h5>
-                <p>CEO-Crystal Telecom Ltd</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-              style="
-                visibility: visible;
-                animation-delay: 300ms;
-                animation-name: fadeInUp;
-              "
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Idi.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Innocent Idi KABANDA</h5>
-                <p>Director of Portfolio Management Division-RSSB</p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Speaker Area -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div
-              class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp"
-              data-wow-delay="300ms"
-              style="
-                visibility: visible;
-                animation-delay: 300ms;
-                animation-name: fadeInUp;
-              "
-            >
-              <!-- Thumb -->
-              <div class="speaker-single-thumb">
-                <img src="img/speakers/Shehzad.jpg" alt="" />
-              </div>
-              <!-- Social Info -->
-              <div class="social-info">
-                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-              </div>
-              <!-- Info -->
-              <div class="speaker-info">
-                <h5>Shehzad Noordally</h5>
-                <p>CEO-CDH Capital Ltd</p>
               </div>
             </div>
           </div>
