--- a/index.html
+++ b/index.html
@@ -136,10 +136,41 @@
               <!-- Welcome Text -->
               <div class="col-12">
                 <div class="welcome-text-two text-center">
+                  <img
+                        src="img/core-img/ASEA-LOGO.png"
+                        alt="ASEA Conference Logo"
+                        class="mx-3"
+                        style="max-height: 200px; object-fit: contain"
+                      />
                   <h5 data-animation="fadeInUp" data-delay="100ms">ASEA</h5>
                   <h2 data-animation="fadeInUp" data-delay="300ms">
                     28th ANNUAL Conference
                   </h2>
+
+                  <!-- Organizer Logos -->
+                  <div
+                    class="organizers-logo-area"
+                    data-animation="fadeInUp"
+                    data-delay="400ms"
+                  >
+                    <div
+                      class="d-flex justify-content-center align-items-center mb-4"
+                    >
+                      <img
+                        src="img/core-img/logo_asea.png"
+                        alt="ASEA Logo"
+                        class="mx-5"
+                        style="max-height: 80px; object-fit: contain; width: auto; margin-right: 8%;"
+                      />
+                      <img
+                        src="img/members/13_rwanda_stock-1-150x150.png"
+                        alt="Rwanda Stock Exchange"
+                        class="mx-5"
+                        style="max-height: 70px; object-fit: contain; width: auto;"
+                      />
+                    </div>
+                  </div>
+
                   <!-- Event Meta -->
                   <div
                     class="event-meta"
@@ -415,7 +446,7 @@
                   >
                     <a href="schedule.html" class="btn confer-gb-btn"
                       >View Full Program Page</a
-                    >
+                    ></a>
                   </div>
                 </div> -->
               </div>
@@ -459,7 +490,9 @@
 
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
-                <p><i class="zmdi zmdi-check"></i> All Days Conference Ticket</p>
+                <p>
+                  <i class="zmdi zmdi-check"></i> All Days Conference Ticket
+                </p>
                 <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
                 <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
                 <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
@@ -486,7 +519,9 @@
 
               <!-- Ticket Pricing Table Details -->
               <div class="ticket-pricing-table-details">
-                <p><i class="zmdi zmdi-check"></i> All Days Conference Ticket</p>
+                <p>
+                  <i class="zmdi zmdi-check"></i> All Days Conference Ticket
+                </p>
                 <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
                 <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
                 <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
