removing program from homepage

--- a/index.html
+++ b/index.html
@@ -967,9 +967,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="travel.html">DESTINATION GUIDE</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="#">MEDIA</a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
 
@@ -1326,7 +1326,7 @@
     <!-- About Section End -->
 
     <!-- Schedule Section Start -->
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -1393,7 +1393,7 @@
           <a href="schedule.html" class="btn btn-primary">View Full Program</a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Schedule Section End -->
 
     <!-- Host Country Section Start -->
