--- a/speakers.html
+++ b/speakers.html
@@ -1283,7 +1283,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-widget footer-info">
               <img
-                src="img/core-img/ASEA-LOGO.png"
+                src="img/members/logo_asea_white.png"
                 alt="ASEA Logo"
                 class="mb-4"
                 style="max-height: 60px"
@@ -1293,10 +1293,10 @@
                 premier association of securities exchanges in Africa.
               </p>
               <div class="footer-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -1317,9 +1317,9 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-widget">
               <h4>Contact Info</h4>
-              <p><i class="fa fa-map-marker"></i> Kigali, Rwanda</p>
-              <p><i class="fa fa-phone"></i> +250 788 123 456</p>
-              <p><i class="fa fa-envelope"></i> info@asea-conference.org</p>
+              <p><i class="fas fa-map-marker-alt"></i> Kigali, Rwanda</p>
+              <p><i class="fas fa-phone-alt"></i> +250 788 123 456</p>
+              <p><i class="fas fa-envelope"></i> info@asea-conference.org</p>
             </div>
           </div>
 
@@ -1329,7 +1329,9 @@
               <p>Stay updated with the latest news and announcements</p>
               <form class="footer-newsletter">
                 <input type="email" placeholder="Your Email" />
-                <button type="submit"><i class="fa fa-paper-plane"></i></button>
+                <button type="submit">
+                  <i class="fas fa-paper-plane"></i>
+                </button>
               </form>
             </div>
           </div>
