--- a/speakers.html
+++ b/speakers.html
@@ -843,7 +843,7 @@
     <!-- Featured Speaker Start -->
     <section class="featured-speaker">
       <div class="container">
-        <div class="row align-items-center">
+        <!-- <div class="row align-items-center">
           <div class="col-lg-5">
             <div class="featured-speaker-image fade-in-up">
               <img
@@ -875,7 +875,7 @@
               <a href="#" class="btn btn-light">Read Full Profile</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- Featured Speaker End -->
@@ -884,7 +884,7 @@
     <section class="section">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <!-- <div class="col-12">
             <div class="section-header">
               <h2>Conference Speakers</h2>
               <p>
@@ -892,11 +892,11 @@
                 beyond
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <!-- Speaker Categories -->
-        <div class="speaker-categories">
+        <!-- <div class="speaker-categories">
           <button class="category-button active" data-category="all">
             All
           </button>
@@ -910,11 +910,11 @@
           <button class="category-button" data-category="regulator">
             Regulators
           </button>
-        </div>
+        </div> -->
 
         <div class="row">
           <!-- Speaker 1 -->
-          <div class="col-lg-3 col-md-6" data-category="keynote ceo">
+          <!-- <div class="col-lg-3 col-md-6" data-category="keynote ceo">
             <div class="speaker-card fade-in-up">
               <div class="speaker-image">
                 <img src="img/speakers/Idi.jpg" alt="Idrissa Diop" />
@@ -935,10 +935,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 2 -->
-          <div class="col-lg-3 col-md-6" data-category="expert">
+          <!-- <div class="col-lg-3 col-md-6" data-category="expert">
             <div class="speaker-card fade-in-up" style="animation-delay: 0.2s">
               <div class="speaker-image">
                 <img src="img/speakers/Iza.jpg" alt="Izabella Kaminska" />
@@ -959,10 +959,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 3 -->
-          <div class="col-lg-3 col-md-6" data-category="regulator">
+          <!-- <div class="col-lg-3 col-md-6" data-category="regulator">
             <div class="speaker-card fade-in-up" style="animation-delay: 0.4s">
               <div class="speaker-image">
                 <img src="img/bg-img/44.jpg" alt="Emmanuel Nyirinkindi" />
@@ -983,10 +983,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 4 -->
-          <div class="col-lg-3 col-md-6" data-category="ceo">
+          <!-- <div class="col-lg-3 col-md-6" data-category="ceo">
             <div class="speaker-card fade-in-up" style="animation-delay: 0.6s">
               <div class="speaker-image">
                 <img src="img/bg-img/45.jpg" alt="Celestin Rwabukumba" />
@@ -1007,10 +1007,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 5 -->
-          <div class="col-lg-3 col-md-6" data-category="expert">
+          <!-- <div class="col-lg-3 col-md-6" data-category="expert">
             <div class="speaker-card fade-in-up" style="animation-delay: 0.8s">
               <div class="speaker-image">
                 <img src="img/bg-img/46.jpg" alt="Sarah Kariuki" />
@@ -1031,10 +1031,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 6 -->
-          <div class="col-lg-3 col-md-6" data-category="regulator">
+          <!-- <div class="col-lg-3 col-md-6" data-category="regulator">
             <div class="speaker-card fade-in-up" style="animation-delay: 1s">
               <div class="speaker-image">
                 <img src="img/bg-img/47.jpg" alt="Mohamed El Amine" />
@@ -1055,10 +1055,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 7 -->
-          <div class="col-lg-3 col-md-6" data-category="ceo">
+          <!-- <div class="col-lg-3 col-md-6" data-category="ceo">
             <div class="speaker-card fade-in-up" style="animation-delay: 1.2s">
               <div class="speaker-image">
                 <img src="img/bg-img/48.jpg" alt="David Trezeguet" />
@@ -1079,10 +1079,10 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Speaker 8 -->
-          <div class="col-lg-3 col-md-6" data-category="keynote">
+          <!-- <div class="col-lg-3 col-md-6" data-category="keynote">
             <div class="speaker-card fade-in-up" style="animation-delay: 1.4s">
               <div class="speaker-image">
                 <img src="img/bg-img/49.jpg" alt="Clara Mwangi" />
@@ -1103,14 +1103,14 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
     <!-- Speakers Section End -->
 
     <!-- CTA Section Start -->
-    <section class="cta-section">
+    <!-- <section class="cta-section">
       <div class="container">
         <h2>Become a Speaker</h2>
         <p>
@@ -1119,7 +1119,7 @@
         </p>
         <a href="contact.html" class="btn btn-light btn-lg">Apply Now</a>
       </div>
-    </section>
+    </section> -->
     <!-- CTA Section End -->
 
     <!-- Speaker Modal 1 -->
