--- a/index.html
+++ b/index.html
@@ -960,6 +960,9 @@
                     <a class="nav-link" href="speakers.html">SPEAKERS</a>
                   </li> -->
                   <li class="nav-item">
+                    <a class="nav-link" href="sponsors.html">SPONSORS</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="accommodation.html"
                       >Accommodation</a
                     >
