--- a/sponsors.html
+++ b/sponsors.html
@@ -488,7 +488,7 @@
               class="section-header text-center wow fadeInUp"
               data-wow-delay="300ms"
             >
-              <p>Choose Your Level</p>
+              <p>Choose Your Package</p>
               <h2>Sponsorship Packages</h2>
             </div>
           </div>
@@ -755,8 +755,8 @@
     <!-- Contact Sponsor Area End -->
 
     <!-- Past Sponsors Area Start -->
-    <section class="our-sponsor-client-area section-padding-100">
-      <div class="container">
+    <!-- <section class="our-sponsor-client-area section-padding-100">
+      <div class="container"> -->
         <!-- <div class="row">
           <div class="col-12">
             <div
@@ -769,7 +769,7 @@
           </div>
         </div> -->
 
-        <div class="row">
+        <!-- <div class="row"> -->
           <!-- <div class="col-12">
             <div class="our-sponsor-area d-flex flex-wrap">
               <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
@@ -798,9 +798,9 @@
               </div>
             </div>
           </div> -->
-        </div>
+        <!-- </div>
       </div>
-    </section>
+    </section> -->
     <!-- Past Sponsors Area End -->
 
     <!-- Footer Area Start -->
