--- a/accommodation.html
+++ b/accommodation.html
@@ -11,7 +11,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <!-- Title -->
     <title>ASEA - Accommodation Information</title>
 
@@ -122,7 +125,7 @@
           margin-left: 0;
         }
       }
-       .footer-area {
+      .footer-area {
         background: var(--dark-color);
         color: #aaa;
         padding: 70px 0 0;
