--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
     <!-- Title -->
     <title>ASEA - Conference Event HTML Template</title>
@@ -123,7 +127,7 @@
           margin-left: 0;
         }
       }
-       .footer-area {
+      .footer-area {
         background: var(--dark-color);
         color: #aaa;
         padding: 70px 0 0;
