--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+   <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <!-- Title -->
     <title>ASEA - Travel Information</title>
 
@@ -246,6 +249,159 @@
       .custom-card-body {
         padding: 30px;
         background: #f8f9fa;
+      }
+         .footer-area {
+        background: var(--dark-color);
+        color: #aaa;
+        padding: 70px 0 0;
+      }
+
+      .footer-widget {
+        margin-bottom: 40px;
+      }
+
+      .footer-widget h4 {
+        color: white;
+        margin-bottom: 25px;
+        position: relative;
+        padding-bottom: 15px;
+        font-size: 1.4rem;
+      }
+
+      .footer-widget h4:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 50px;
+        height: 2px;
+        background: var(--secondary-color);
+      }
+
+      .footer-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .footer-links li {
+        margin-bottom: 10px;
+      }
+
+      .footer-links li a {
+        color: #aaa;
+        transition: all 0.3s;
+        text-decoration: none;
+        position: relative;
+        padding-left: 15px;
+        display: block;
+      }
+
+      .footer-links li a:before {
+        content: '\f105';
+        font-family: 'FontAwesome';
+        position: absolute;
+        left: 0;
+        top: 0;
+        color: var(--secondary-color);
+      }
+
+      .footer-links li a:hover {
+        color: white;
+        padding-left: 20px;
+      }
+
+      .footer-info p {
+        margin-bottom: 15px;
+        position: relative;
+        padding-left: 25px;
+      }
+
+      .footer-info p i {
+        position: absolute;
+        left: 0;
+        top: 5px;
+        color: var(--secondary-color);
+      }
+
+      .footer-social a {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        color: white;
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+        transition: all 0.3s;
+      }
+
+      .footer-social a:hover {
+        background: var(--secondary-color);
+        transform: translateY(-3px);
+      }
+
+      .footer-newsletter {
+        display: flex;
+        position: relative;
+      }
+
+      .footer-newsletter input {
+        background: rgba(255, 255, 255, 0.1);
+        border: none;
+        border-radius: 50px;
+        padding: 12px 20px;
+        width: 100%;
+        color: white;
+      }
+
+      .footer-newsletter input::placeholder {
+        color: rgba(255, 255, 255, 0.5);
+      }
+
+      .footer-newsletter button {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        background: var(--secondary-color);
+        border: none;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        color: white;
+        transition: all 0.3s;
+      }
+
+      .footer-newsletter button:hover {
+        background: var(--accent-color);
+        transform: scale(1.1);
+      }
+
+      .footer-newsletter button {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        background: var(--secondary-color);
+        border: none;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        color: white;
+        transition: all 0.3s;
+      }
+
+      .footer-newsletter button:hover {
+        background: var(--accent-color);
+        transform: scale(1.1);
+      }
+
+      .copyright {
+        background: rgba(0, 0, 0, 0.2);
+        padding: 15px 0;
+        margin-top: 30px;
+        text-align: center;
+        color: rgba(255, 255, 255, 0.7);
       }
     </style>
   </head>
@@ -840,121 +996,70 @@
     <!-- Main Content Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="footer-area bg-img bg-overlay-2 section-padding-100-0">
-      <!-- Main Footer Area -->
-      <div class="main-footer-area">
-        <div class="container">
-          <div class="row">
-            <!-- Single Footer Widget Area -->
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div
-                class="single-footer-widget mb-60 wow fadeInUp"
-                data-wow-delay="300ms"
-              >
-                <!-- Footer Logo -->
-                <a href="#" class="footer-logo"
-                  ><img src="img/core-img/ASEA-LOGO.png" alt="" width="150"
-                /></a>
-                <p>
-                  The African Securities Exchanges Association is the Premier
-                  Association of Securities Exchanges in Africa.
-                </p>
-
-                <!-- Social Info -->
-                <div class="social-info">
-                  <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                  <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                  <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                  <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                </div>
+    <footer class="footer-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget footer-info">
+              <img
+                src="img/members/logo_asea_white.png"
+                alt="ASEA Logo"
+                class="mb-4"
+                style="max-height: 60px"
+              />
+              <p>
+                The African Securities Exchanges Association (ASEA) is the
+                premier association of securities exchanges in Africa.
+              </p>
+              <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
+          </div>
 
-            <!-- Single Footer Widget Area -->
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div
-                class="single-footer-widget mb-60 wow fadeInUp"
-                data-wow-delay="300ms"
-              >
-                <!-- Widget Title -->
-                <h5 class="widget-title">Contact</h5>
-
-                <!-- Contact Area -->
-                <div class="footer-contact-info">
-                  <p>
-                    <i class="zmdi zmdi-map"></i> Kigali City Tower, KCT 1st
-                    Floor
-                  </p>
-                  <p><i class="zmdi zmdi-phone"></i> +250 788 516 021</p>
-                  <p>
-                    <i class="zmdi zmdi-email"></i>
-                    <a href="#" class="__cf_email__" style="color: white"
-                      >info@rse.rw</a
-                    >
-                  </p>
-                  <p><i class="zmdi zmdi-globe"></i>www.rse.rw</p>
-                </div>
-              </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Quick Links</h4>
+              <ul class="footer-links">
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="registration.html">Registration</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
             </div>
+          </div>
 
-            <!-- Single Footer Widget Area -->
-            <div class="col-12 col-sm-6 col-lg-4">
-              <div
-                class="single-footer-widget mb-60 wow fadeInUp"
-                data-wow-delay="300ms"
-              >
-                <!-- Widget Title -->
-                <h5 class="widget-title">Quick Links</h5>
-
-                <!-- Footer Nav -->
-                <ul class="footer-nav">
-                  <li><a href="#">Registration</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Accommodation</a></li>
-                  <li><a href="#">Speakers</a></li>
-                </ul>
-              </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Contact Info</h4>
+              <p><i class="fas fa-map-marker-alt"></i> Kigali, Rwanda</p>
+              <p><i class="fas fa-phone-alt"></i> +250 788 123 456</p>
+              <p><i class="fas fa-envelope"></i> info@asea-conference.org</p>
             </div>
+          </div>
 
-            <!-- Single Footer Widget Area -->
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Subscribe</h4>
+              <p>Stay updated with the latest news and announcements</p>
+              <form class="footer-newsletter">
+                <input type="email" placeholder="Your Email" />
+                <button type="submit">
+                  <i class="fas fa-paper-plane"></i>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Copywrite Area -->
-      <div class="container">
-        <div class="copywrite-content">
-          <div class="row">
-            <!-- Copywrite Text -->
-            <div class="col-12 col-md-6">
-              <div class="copywrite-text">
-                <p>
-                  &copy;
-                  <script>
-                    document.write(new Date().getFullYear());
-                  </script>
-                  African Securities Exchange Association. All Rights Reserved
-                </p>
-              </div>
-            </div>
-            <!-- Footer Menu -->
-            <div class="col-12 col-md-6">
-              <div class="footer-menu">
-                <ul class="nav">
-                  <li>
-                    <a href="#"
-                      ><i class="zmdi zmdi-circle"></i> Terms of Service</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="zmdi zmdi-circle"></i> Privacy Policy</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+      <div class="copyright">
+        <div class="container">
+          <p>&copy; 2025 ASEA Conference. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
