sponsorship packages removed

--- a/sponsors.html
+++ b/sponsors.html
@@ -633,7 +633,7 @@
     <!-- Why Sponsor Area End -->
 
     <!-- Sponsor Packages Start -->
-    <section class="sponsor-levels section-padding-100-0">
+    <!-- <section class="sponsor-levels section-padding-100-0">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -784,7 +784,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Sponsor Packages End -->
 
     <!-- Contact Sponsor Area Start -->
